--- a/index.html
+++ b/index.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Sam kamali</title>
+    <style>
+      body { background: url(https://images.unsplash.com/photo-1483794344563-d27a8d18014e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80); background-size: cover ;}
+    </style>
+  </head>
 
-    <head>
-        <!-- Document information-->
-        <meta charset="UTF-8">
-        <title>My first college page!</title>
-
-    </head>
 
 
-    <body>
-        <!-- Document content-->
-        <header>
-            <h1>This is my Website Header</h1> 
-            <nav> <i>This is where the navigation links will be added</i> </nav>
-          </header>
+  <body>
+    <header>
+      <h1><u>About Me</u></h1><br>
+   
+      <h3><em>Introduction</em></h3>
+      <p> My name is Sam Kamali, and I am an IMD student at Algonquin College. I was born in Iran on Oct 30 <sup>th</sup>, 1997. I am currently residing in Ottawa,ON Canada.<br> I would describe myself as someone who is versatile, open-minded and determined.</p>
 
-          <main>
-            <h2>This is the main content of the page</h2>
-            <article>This is the article on the page</article>
-            <aside>Some additional but not relevant information</aside>
-            <section>Some more information about our website</section>
-          </main>
-
-          <footer>The footer of the web page</footer>
-    </body>
-
+        <h3><em>My Skills</em></h3> 
+        <p> I have a bachelor's degree in computer engineering and I am curently studying to become an Interactive media designer.<br>
+          I am skilled in Adobe Photoshop, Illustrator, Digital marketing, HTML/CSS programming and User Interface design and I work well with others in a team as well as on my own.
+          <br><br>  <br><br>  <br><br> <br><br>  <br><br>  <br><br> <br><br>  <br><br>  <br><br> <br><br>    
+      
+    </header>
+   
+    <footer> <small>&copy; Copyright 2022, Sam Kamali, #041054549</small> </footer> 
+  </body>
 </html>
