--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -29,9 +29,10 @@
                     <ul>
                         <li>Adobe Photoshop</li>
                         <li>Adobe Illustrator</li>
-                        <li><abbr title="Hypertext Markup Language">HTML</abbr>/<abbr title="Cascading Style Sheets">CSS</abbr></li> (On <a href="notes.html" target="_blank">this page</a> you can find 5 HTML tags I have learnt and their description.)
+                        <li><abbr title="Hypertext Markup Language">HTML</abbr>/<abbr title="Cascading Style Sheets">CSS</abbr></li> 
                         <li>Autodesk Maya</li>
                     </ul>
+                (On <a href="notes.html" target="_blank">Notes page</a> you can find 5 HTML tags I have learnt and their description.)
             </section>
 
             <section>
@@ -45,12 +46,10 @@
             
             <br>
             <section>
-                <refrence>January 2022 in Ottawa.ON - Photo by sarah.k </refrence>
                 <img src="img/avatar5096874676-0.jpg" alt="sam-kamali-photo" width="280" />
             </section><br>
+        
         </main>
-
         <footer>&copy; Copyright 2022, Sam Kamali, #041054549 </footer>
-
     </body>
 </html>
