--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -21,16 +21,16 @@
             <section>
                 <dl>
                     <dt><strong>The form tag</strong></dt>
-                    <dd>To start adding a form to our HTML page we start by adding the <form></form> tag. Form is a paired tag and any information we want to collect using this form will be added inside the opening <form> and closing </form> form tags.</dd><br>
+                    <dd>To start adding a form to our HTML page we start by adding the form tag. Form is a paired tag and any information we want to collect using this form will be added inside the opening and closing form tags.</dd>
                   
                     <dt><strong> The Image tag</strong></dt>
-                    <dd>The <img> tag needs two pieces of information one which image to link to and two a short description of the image.</dd><br>
+                    <dd>The img tag needs two pieces of information one which image to link to and two a short description of the image.</dd>
                   
                     <dt><strong>The Ordered List tag</strong></dt>
-                    <dd>Based on the name ordered lists are used when the order of items in the list is important.</dd><br>
+                    <dd>Based on the name ordered lists are used when the order of items in the list is important.</dd>
 
                     <dt><strong>The unordered List tag</strong></dt>
-                    <dd>An unordered list is used when the items inside the list do not have a specific order or the order is not important.</dd><br>
+                    <dd>An unordered list is used when the items inside the list do not have a specific order or the order is not important.</dd>
 
                     <dt><strong>The Description List tag</strong></dt>
                     <dd>This is a special type of list where we have a term and description of the term.</dd>
