adds css styles

--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notes page</title>
-    <style>
-        body { background: url(img/sarah-dorweiler-QeVmJxZOv3k-unsplash\ \(1\).jpg); background-size:cover;}
-      </style>
+    <link href="css/main.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.typekit.net/dkn6avn.css">
+    
 </head>
 
-<body>
+<body class="notes">
     <header>
         <h1> 5 HTML tags I have learnt and their description</h1>
     </header>
@@ -21,7 +21,7 @@
             <section>
                 <dl>
                     <dt><strong>The form tag</strong></dt>
-                    <dd>To start adding a form to our HTML page we start by adding the form tag. Form is a paired tag and any information we want to collect using this form will be added inside the opening and closing form tags.</dd>
+                    <dd>Form is a paired tag. Any information we want to collect using this form will be added inside the opening and closing form tags.</dd>
                   
                     <dt><strong> The Image tag</strong></dt>
                     <dd>The img tag needs two pieces of information one which image to link to and two a short description of the image.</dd>
@@ -39,7 +39,7 @@
             </section>
         </main>
 
-     <br><br><br><br><br><br><br><br><br><br><br>
+     <br><br><br><br>
     <footer>&copy; Copyright 2022, Sam Kamali, #041054549 </footer>
 </body>
 </html>
