--- a/midterm/index.html
+++ b/midterm/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <div class="eminem">
+        <div class="snoop">
         <h1>Lone Starfish</h1>
         </div>
             <nav>
@@ -36,6 +36,7 @@
                     <li>Herring barbel Mexican golden trout, killifish bonito; northern anchovy.</li>
                     <li>Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra.</li>      
                 </ul>
+            </div>
         </section>     
         <section>        
                 <h3>Contact to learn more</h3>
@@ -64,6 +65,7 @@
                 </div>
         </section>
     </header>
+
     <footer>&copy; Lone starfish.</footer>
     
 </body>
