--- a/midterm/index.html
+++ b/midterm/index.html
@@ -18,15 +18,15 @@
                 <div class="row">
                     <ul>
                         <li><a href="#">HOME</a></li>
-                        <li><a href="#">STORY</a></li>
-                        <li><a href="#">CONTACT</a></li>
+                        <li><a href="#article">STORY</a></li>
+                        <li><a href="#contact">CONTACT</a></li>
                         
                     </ul>
                 </div>
             </nav>
         <section>       
             <div class="wrapper">
-                <h2>Life of a Starfish</h2>
+                <h2 id="article">Life of a Starfish</h2>
                 <img src="../midterm/recourses/lone-starfish.jpg" alt="starfish">
                 <p>Swallower catla Black angelfish grunter striped bass scissor-tail rasbora; slender mola. Snapper catalufa silver driftfish, kaluga lungfish boga greeneye, "french angelfish peamouth halfbeak batfish Australian prowfish mouthbrooder." Gibberfish tui chub mooneye smoothtongue; amur pike barbeled houndshark dwarf loach beachsalmon archerfish longfin fingerfish, thornfish: plownose chimaera gurnard. Dragon goby long-finned char bluntnose knifefish aruana eelpout elasmobranch snipefish; rock bass sea devil trunkfish. Australian herring barbel Mexican golden trout, killifish bonito; northern anchovy. Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra. Modoc sucker northern clingfish mudsucker x-ray tetra squaretail jackfish. Paradise fish cuchia Redhorse sucker ayu Ganges shark rockling flyingfish pearleye mahi-mahi yellow weaver: ghost pipefish ide armoured catfish halibut. Torpedo; leopard danio minnow leatherjacket hardhead catfish wobbegong trench squeaker crestfish, halibut glowlight danio sailback scorpionfish unicorn fish. Tadpole cod ricefish Shingle Fish emperor drum yellow-edged moray velvet catfish flabby whalefish. Featherfin knifefish plaice pike eel tarwhine Black triggerfish pearl danio cownose ray. Merluccid hake, platy peamouth humuhumunukunukuapua'a barred danio. Black dragonfish, stingray lightfish Australian lungfish searobin false trevally, dottyback.</p><br>
                 <h3>Facts About Starfish</h3>
@@ -39,7 +39,7 @@
             </div>
         </section>     
         <section>        
-                <h3>Contact to learn more</h3>
+                <h3 id="contact">Contact to learn more</h3>
                 <div class="contact-form">
                     <label for="name">Your Name</label>
                     <div class="box">
@@ -59,9 +59,8 @@
                     Yes <input type="radio"> 
                     No <input type="radio">
                     Maybe <input type="radio">
-                    <div class="send-box">
-                        <input type="submit" value="SEND">
-                    </div>
+                    <br>
+                    <input type="submit" value="SEND">
                 </div>
         </section>
     </header>
