--- a/final-project/index.html
+++ b/final-project/index.html
@@ -39,7 +39,7 @@
         </div>
     </header>
 
-        <!-- services class organizes h2, texts,buttons and caret icons -->
+        <!-- services class organizes h2, texts,buttons and caret icons and it will be useful for grid -->
         <section class="services" id="services">
             <h2>Our Services</h2>
             <div>
@@ -100,7 +100,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo velit pariatur dolores, in cum corporis debitis iure totam, quibusdam eligendi reiciendis incidunt adipisci odit nobis ipsum, amet quos illum omnis.</p>
             </div>
         </section>
-
+        <!-- class class includes h2, h3, labels and inputs to be later adjusted in css -->
         <section class="contact" id="contact">
             <h2>Contact Us</h2>
             <h3>Send us a message</h3>
@@ -117,7 +117,7 @@
                 </form>
         </section>
 
-        <!-- table to organize contents for Days and Hours -->
+        <!-- table to organize contents for Days and Hours- applying borders and alignments later in css -->
         <section>
             <h3>Hours of operation</h3>
             <table>
@@ -136,12 +136,12 @@
             </table>
         </section>
 
-        <!-- adds location of the college -->
+        <!-- used iframe from google maps to add location of the college -->
         <section>
             <h3>Location</h3>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d106713.1804656935!2d-75.90996009385509!3d45.34456610443564!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0718cc4a6ad7%3A0xc6cc467725843e2b!2sAlgonquin%20College%20Ottawa%20Campus!5e0!3m2!1sen!2sca!4v1649259332887!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
-        <!-- adds copyright and a link to the unsplash website -->
+        <!-- used anchor to add a link to the unsplash website and adds copyright sentence -->
         <footer>
             <p>&copy; Copyright Three Star Media, 2020</p>
             <p>All images are taken from <a href="https://unsplash.com/">Unsplash</a></p>
