--- a/final-project/index.html
+++ b/final-project/index.html
@@ -38,8 +38,10 @@
                 </div>
             </div>
             <img src="img/about-us.jpg" alt="pingpong" class="aboutus">
-            <h2 id="aboutus">About Us</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti nisi, molestias accusamus officiis similique suscipit laudantium consectetur quod porro expedita ratione rem, sapiente iste dolorum. Illo voluptatem itaque numquam debitis.<br> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio ipsam et velit odit. Sint amet dolore minus consequuntur? Repellendus tempora minus, consequatur quas delectus earum aliquid quibusdam assumenda ipsam. Corporis.</p>
+            <div class="aboutuss">
+                <h2 id="aboutus">About Us</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti nisi, molestias accusamus officiis similique suscipit laudantium consectetur quod porro expedita ratione rem, sapiente iste dolorum. Illo voluptatem itaque numquam debitis.<br> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio ipsam et velit odit. Sint amet dolore minus consequuntur? Repellendus tempora minus, consequatur quas delectus earum aliquid quibusdam assumenda ipsam. Corporis.</p>
+            </div>
         </header>
     </div>
 
