--- a/final-project/index.html
+++ b/final-project/index.html
@@ -26,7 +26,7 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
             <input type="search" name="search" id="search" placeholder="Search">
-            <button type="button"><i class="fa-solid fa-magnifying-glass"></i></button>
+            <button class="search-btn" type="button"><i class="fa-solid fa-magnifying-glass"></i></button>
         </nav> 
         <header>
             <div class="stage"> 
